schema/testdata/validation_relationships_one_to_many_no_fields_on_one_side/schema.keel
model Author {
}

model Post {
    fields {
        author Author[]
        coAuthor Author[]
    }
}
